Correct contacts gap in header

--- a/css/slyles.css
+++ b/css/slyles.css
@@ -121,7 +121,7 @@ img {
   display: flex;
   align-items: baseline;
   margin-left: auto;
-  gap: 50px;
+  gap: 30px;
 }
 
 .contact-link {
